# uttt-bot

./: .gitignore  Cargo.toml  gen_random_data.py  torch_net_2.py  uttt_zero.py
src/: ai.rs  bitboard.rs  genevaltraining.rs  genexamples.rs  killermovesearch.rs  main.rs  mcts.rs  montecarloai.rs  nn.rs  pit.rs  profile.rs  quietextend.rs  shortextend.rs  simplesearch.rs  simplesearchcenter.rs  utttzero.rs
