[package]
name = "uttt-bot"
version = "0.1.0"
authors = ["Andrew Briand <atb8888@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.8"
bitintr = "0.3.0"

[dependencies.rand]
version = "0.7.3"
features = ["small_rng"]

[profile.release]
debug = true

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "elo"
path = "src/elo.rs"

